--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -203,6 +203,9 @@
     <Filter Include="ソース ファイル\Game\Efect\Player Smoke">
       <UniqueIdentifier>{9f204d38-7b78-4ce2-9b0e-cb4ee32353aa}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Efect\Buffs">
+      <UniqueIdentifier>{1dd8907e-ef5f-40c8-91f7-50212c9ff3e0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -768,6 +771,12 @@
     </ClCompile>
     <ClCompile Include="src\Game\CSmoke.cpp">
       <Filter>ソース ファイル\Game\Efect\Player Smoke</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CHealingUpBuffs.cpp">
+      <Filter>ソース ファイル\Game\Efect\Buffs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CInvincibleBuffs.cpp">
+      <Filter>ソース ファイル\Game\Efect\Buffs</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1358,6 +1367,12 @@
     </ClInclude>
     <ClInclude Include="src\Game\CSmoke.h">
       <Filter>ソース ファイル\Game\Efect\Player Smoke</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CHealingUpBuffs.h">
+      <Filter>ソース ファイル\Game\Efect\Buffs</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CInvincibleBuffs.h">
+      <Filter>ソース ファイル\Game\Efect\Buffs</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
