--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -206,6 +206,9 @@
     <Filter Include="ソース ファイル\Game\Efect\Buffs">
       <UniqueIdentifier>{1dd8907e-ef5f-40c8-91f7-50212c9ff3e0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Character\CharaObject\ItemObject\Meat">
+      <UniqueIdentifier>{3e61bafc-ce4a-48a7-9c2f-3c759cefcdf8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -781,11 +784,20 @@
     <ClCompile Include="src\Game\CAttackUpBuffs.cpp">
       <Filter>ソース ファイル\Game\Efect\Buffs</Filter>
     </ClCompile>
-    <ClCompile Include="src\Game\CMeat.cpp">
-      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject</Filter>
-    </ClCompile>
     <ClCompile Include="src\Game\CMeatObjectBase.cpp">
       <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Base</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CMeatUI.cpp">
+      <Filter>ソース ファイル\Game\UI\StageUI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CMeat1.cpp">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Meat</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CMeat2.cpp">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Meat</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CMeat3.cpp">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Meat</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1386,11 +1398,20 @@
     <ClInclude Include="src\Game\CAttackUpBuffs.h">
       <Filter>ソース ファイル\Game\Efect\Buffs</Filter>
     </ClInclude>
-    <ClInclude Include="src\Game\CMeat.h">
-      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject</Filter>
-    </ClInclude>
     <ClInclude Include="src\Game\CMeatObjectBase.h">
       <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CMeatUI.h">
+      <Filter>ソース ファイル\Game\UI\StageUI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CMeat1.h">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Meat</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CMeat2.h">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Meat</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CMeat3.h">
+      <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Meat</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
